--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   go_router: ^13.0.0
   provider: ^6.1.1
   flutter_svg: ^2.0.9
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
