--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.1
   flutter_svg: ^2.0.9
   smooth_page_indicator: ^1.1.0
+  pinput: ^3.0.1
 
 dev_dependencies:
   flutter_test:
