--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   flutter_svg: ^2.0.9
   smooth_page_indicator: ^1.1.0
   pinput: ^3.0.1
+  flutter_dotenv: ^5.1.0
+  dio: ^5.4.0
+  freezed: ^2.4.6
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
