--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   freezed: ^2.4.6
   flutter_secure_storage: ^9.0.0
   http: ^1.1.2
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
