--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   http: ^1.1.2
   google_sign_in: ^6.2.1
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
