--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   http: ^1.1.2
   google_sign_in: ^6.2.1
   flutter_easyloading: ^3.0.5
+  fluttertoast: ^8.2.4
 
 dev_dependencies:
   flutter_test:
