--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_easyloading: ^3.0.5
   fluttertoast: ^8.2.4
+  build_runner: ^2.4.8
+  freezed_annotation: ^2.4.1
+  json_serializable: ^6.7.1
+  json_annotation: ^4.8.1
 
 dev_dependencies:
   flutter_test:
