add app icon and rename app

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,6 +71,9 @@ android {
         debug {
             signingConfig signingConfigs.debug
         }
+        release {
+            signingConfig signingConfigs.debug
+        }
     }
 }
 
